@@ -1,5 +1,12 @@
 2011-08-09 Alexandre Ferrieux  <ferrieux@users.sourceforge.net>
 
+	* generic/tclBasic.c: [Bug 2919042] Restore "valgrindability" of Tcl
+	* generic/tclEvent.c: that was lost by the streamlining of [exit], by
+	* generic/tclExecute.c: conditionally forcing a full Finalize:
+	* generic/tclInt.h:  use -DPURIFY or ::env(TCL_FINALIZE_ON_EXIT)
+
+2011-08-09 Alexandre Ferrieux  <ferrieux@users.sourceforge.net>
+
 	* generic/tclCompCmds.c: [Bug 3386417] avoid a reference loop between
 	* generic/tclInt.h:      the bytecode and its companion errostack
 	* generic/tclResult.c:   when compiling a syntax error.
